Update Server message

--- a/banner/banner.conf
+++ b/banner/banner.conf
@@ -1,29 +1,18 @@
-<font color="white">
-<H3 style="text-align:center">
-🚀 Premium Server SSH Websocket 🚀</span></H3>
+<H3 style="text-align:center; color:#FF0000;">
+<span style="color:#FF0000;">┏━━━━━━━━━━━━━━━┓</span> <span style="color:#FF7F00;">❖𝑇𝐸𝐶𝐻𝑁𝑂𝐿𝑂𝐺𝑌 𝐶𝑂𝑃𝑆❖</span> <span style="color:#FF0000;">┗━━━━━━━━━━━━━━━┛</span>
 
+<span style="color:#FFFF00;">क══════क⊹⊱✫⊰⊹क══════क </span></H3>
+<font color="white"><H3 style="text-align:center">
+աɛʟƈօʍɛ ȶօ ʍǟɦ ʋɨք ֆɛʀʋɛʀ</span></H3>
 <H3 style="text-align:center">
-❌ NO DDOS ❌</span></H3>
-
-<H3 style="text-align:center">
-❌ NO HACKING ❌</span></H3>
-
-<H3 style="text-align:center">
-❌ NO TORRENT ❌</span></H3>
-
-<H3 style="text-align:center">
-🚯 NO SPAMMING 🚯</span></H3>
-
-<H3 style="text-align:center">
-💳 NO CARDING 💳</span></H3>
-
-<H3 style="text-align:center">
-👥 MAX LOGIN 2 DEVICE 👥</span></H3>
-
-<H3 style="text-align:center">
+❌ NO DDOS ❌</span></H3><H3 style="text-align:center">
+❌ NO HACKING ❌</span></H3><H3 style="text-align:center">
+❌ NO TORRENT ❌</span></H3><H3 style="text-align:center">
+🚯 NO SPAMMING 🚯</span></H3><H3 style="text-align:center">
+💳 NO CARDING 💳</span></H3><H3 style="text-align:center">
+👥 MAX LOGIN 2 DEVICE 👥</span></H3><H3 style="text-align:center">
 🚫 VIOLATE AUTO BANNED PERMANENT 🚫</span></H3>
 <font>
-
 <H3 style="text-align:center">
-🗿 t.me/givpn 🗿</span></H3>
+🗿 t.me/itsmwitah 🗿</span></H3>
 <font>
