--- a/banner/banner.conf
+++ b/banner/banner.conf
@@ -2,8 +2,7 @@
 <span style="color:#FF0000;">┏━━━━━━━━━━━━━━━┓</span> <span style="color:#FF7F00;">❖𝑇𝐸𝐶𝐻𝑁𝑂𝐿𝑂𝐺𝑌 𝐶𝑂𝑃𝑆❖</span> <span style="color:#FF0000;">┗━━━━━━━━━━━━━━━┛</span>
 
 <span style="color:#FFFF00;">क══════क⊹⊱✫⊰⊹क══════क </span></H3>
-<font color="white"><H3 style="text-align:center">
-աɛʟƈօʍɛ ȶօ ʍǟɦ ʋɨք ֆɛʀʋɛʀ</span></H3>
+<font color="white"><H3 style="text-align:center">🅵🆁🅴🅴 🆂🅴🆁🆅🅴🆁</span></H3>
 <H3 style="text-align:center">
 ❌ NO DDOS ❌</span></H3><H3 style="text-align:center">
 ❌ NO HACKING ❌</span></H3><H3 style="text-align:center">
